เพิ่มการ์ดไปนิโหน่ย

--- a/css/custom.css
+++ b/css/custom.css
@@ -43,7 +43,7 @@ h6, .h6 {
 .nav-link2 {
   display: block;
   padding: 0.5rem 1rem;
-}
+} /*for index*/
 
 /*Navbar position (index)
 ===============================================================*/
@@ -163,28 +163,41 @@ h6, .h6 {
 .switch {
   position: relative;
   display: inline-block;
-  width: 191px;
-  height: 34px;
+  width: 11.9375rem;
+  height: 2.125rem;
 }
 
 /* Hide default HTML checkbox */
 .switch input {display:none;}
 
 /* Go to top */
-.up{
-  display: block;
-  bottom: 1.875rem;
-  position: fixed;
-  width: 2.5rem;
-  height: 2.5rem;
-  background-color: #ffffff;
-  top:auto;
-  left: auto;
-  right: 1.875rem;
-  cursor: pointer;
-  border-radius: 2.5rem;
+#myBtn {
+    display: none; /* Hidden by default */
+    position: fixed; /* Fixed/sticky position */
+    bottom: 20px; /* Place the button at the bottom of the page */
+    right: 30px; /* Place the button 30px from the right */
+    z-index: 99; /* Make sure it does not overlap */
+    border: none; /* Remove borders */
+    box-shadow:0px 2px 15px 0px rgba(130,130,130,.5);
+    outline: none; /* Remove outline */
+    background-color: #F5F5F5; /* Set a background color */
+    color: white; /* Text color */
+    cursor: pointer; /* Add a mouse pointer on hover */
+    padding: 1.25px; /* Some padding */
+    /*border-radius: 0.1rem;*/ /* Rounded corners */
+
+    width: 2.8125rem; /* ความกว้าง */
+    height: 2.8125rem; /* ความสูง */
+    -moz-border-radius: 1.5rem; 
+    -webkit-border-radius: 1.5rem;
+    border-radius: 1.5rem;
 }
 
+#myBtn:hover {
+    background-color: #524B52; /* Add a dark-grey background on hover */
+    box-shadow:0px 2px 15px 0px rgba(130,130,130,.5);
+}
+    
 
 /* The slider */
 .slider {
@@ -416,18 +429,120 @@ select.form-control2:focus::-ms-value {
 
 /* Card
 ===============================================================*/
-.containerCard{
-	width:236px;
-	height: 108px;
-	border-radius: 15px;
-	position: relative;
-	top:0;
-	box-shadow: 4px 4px 4px 4px #bdbdbd;
-	cursor:pointer;
+.card{
+  position: relative;
+  margin: 0.625rem 1%;
+  width: 16.5625rem;
+  height: 6.75rem;
+  color: #ffffff;
+  box-shadow:0px 4px 17px 2px rgba(130,130,130,.5);
+  text-align: left;
+  line-height: 1.4em;
+  font-size: 1rem;
+  border-radius: 0.9375rem;
 }
-.colorC1{
-	background: linear-gradient(to bottom right,#f5d760.#ff8c3f);
+.card *{
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
+.card .topcard{
+  position: relative;bottom: 50%;left: 5%;
+  display: inline-block;
+  width: 14.75rem;
+  height: 6.75rem;
+  z-index: 1;
+  padding: 0.625rem;
+  background: linear-gradient(to bottom right,#f5d760,#ff8c3f);
+  border-radius: 0.9375rem;
+}
+
+/*.snip1515 {
+  font-family: 'Prompt', Arial, sans-serif;
+  position: relative;
+  float: left;
+  margin: 10px 1%;
+  min-width: 230px;
+  max-width: 315px;
+  width: 100%;
+  color: #000000;
+  text-align: center;
+  line-height: 1.4em;
+  font-size: 14px;
+  box-shadow: none !important;
+}
+
+.snip1515 * {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.snip1515 .profile-image {
+  display: inline-block;
+  width: 80%;
+  z-index: 1;
+  position: relative;
+  padding: 10px;
+  border: 2px solid #e8b563;
+}
+
+.snip1515 .profile-image img {
+  max-width: 100%;
+  vertical-align: top;
+}
+
+.snip1515 figcaption {
+  width: 100%;
+  background-color: #F2F2F2;
+  color: #555;
+  padding: 125px 25px 25px;
+  margin-top: -100px;
+  display: inline-block;
+}
+
+.snip1515 h3,
+.snip1515 h4,
+.snip1515 p {
+  margin: 0 0 5px;
+}
+
+.snip1515 h3 {
+  font-weight: 600;
+  font-size: 1.3em;
+  font-family: 'Prompt', Arial, sans-serif;
+}
+
+.snip1515 h4 {
+  color: #8c8c8c;
+  font-weight: 400;
+  letter-spacing: 2px;
+}
+
+.snip1515 p {
+  font-size: 0.9em;
+  letter-spacing: 1px;
+  opacity: 0.9;
+}
+
+.snip1515 .icons {
+  text-align: center;
+  width: 100%;
+}
+
+.snip1515 i {
+  padding: 10px 2px;
+  display: inline-block;
+  font-size: 18px;
+  font-weight: normal;
+  color: #e8b563;
+  opacity: 0.75;
+}
+
+.snip1515 i:hover {
+  opacity: 1;
+  -webkit-transition: all 0.35s ease;
+  transition: all 0.35s ease;
+}
+*/
 
 /* Shadow details
 ===============================================================*/
@@ -467,28 +582,77 @@ select.form-control2:focus::-ms-value {
 
 /* Right Side details
 ===============================================================*/
-.list-group-item-action {
+.list-group-item2-action {
   width: 100%;
   color: #495057;
   text-align: inherit;
 }
 
-.list-group-item-action:focus, .list-group-item-action:hover {
+.list-group-item2-action:focus, .list-group-item2-action:hover {
   color: #495057;
   text-decoration: none;
   background-color: #f8f9fa;
 }
 
-.list-group-item-action:active {
+.list-group-item2-action:active {
   color: #212529;
   background-color: #e9ecef;
 }
 
-.list-group-item {
+.list-group-item2 {
   position: relative;
   display: block;
   padding: 0.75rem 1.25rem;
-  margin-bottom: -1px;
-  background-color: #fff;
-  border: 1px solid rgba(0, 0, 0, 0.125);
+  margin-bottom: 0.3125rem;
+  background-color: #ffffff;
+  border: 1rem #524B52;
+  border-radius: 0.5rem;
+}
+
+.buttonLists {
+  border-radius: 0.5rem;
+  background-color: #ffffff;
+  border: 1rem;
+  border-color: #524B52;
+  color: #524B52;
+  text-align: center;
+  font-size: 1rem;
+  padding: 1.25rem;
+  width: 100%;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 0.3125rem;
+}
+
+.buttonLists span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.buttonLists span:after {
+  
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -1.25rem;
+  transition: 0.5s;
+}
+
+.buttonLists:hover span {
+  padding-right: 25px;
+}
+
+.buttonLists:hover span:after {
+  right: 0;
+}
+
+/* Font awesome*/
+@font-face {
+    font-family: FontAwesome;
+    src: url('font-awesome/font/fontawesome-webfont.eot');
+    src: url('font-awesome/font/fontawesome-webfont.eot?') format('embedded-opentype'),
+         url('font-awesome/font/fontawesome-webfont.woff') format('woff'),
+         url('font-awesome/font/fontawesome-webfont.ttf') format('truetype');
 }
