--- a/css/custom.css
+++ b/css/custom.css
@@ -249,7 +249,6 @@ input:checked + .slider:before {
   background-color: transparent;
   font-size: 1rem;
   line-height: 1.5;
-  
   background-clip: padding-box;
 }
 
@@ -312,63 +311,76 @@ select.form-control2:focus::-ms-value {
   padding-left: 1.9rem;
   margin-right: 1rem;
   margin-top: 1rem;
-  /*background:transparent;
-  border-radius: 1rem solid #524B52;*/
 }
-.custom-control-input {
-  position: absolute;
-  z-index: -1;
-  opacity: 0;
-}
-.custom-control-input:checked ~ .custom-control-indicator {
-  color: #fff;
-  background-color: #007bff;
-}
-.custom-control-input:focus ~ .custom-control-indicator {
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
-}
-.custom-control-input:active ~ .custom-control-indicator {
-  color: #fff;
-  background-color: #b3d7ff;
-}
-
-.custom-control-input:disabled ~ .custom-control-indicator {
-  background-color: #e9ecef;
-}
-
-.custom-control-input:disabled ~ .custom-control-description {
-  color: #868e96;
-}
-.custom-control-indicator {
+.custom-control-indicator-1 {
   position: absolute;
   top: 0.25rem;
   left: 0;
   display: block;
-  width: 1rem;
-  height: 1rem;
+  width: 1.2rem;
+  height: 1.2rem;
   pointer-events: none;
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
-  background-color: #ffffff;
-  border-radius: 0.5rem;
-  border: 1rem #524B52;
+  background-color: #F5F5F5;
+  background-repeat: no-repeat;
+  border:2.5px solid #A6A6A6;
+  border-radius: 5px;
   background-position: center center;
   background-size: 50% 50%;
 }
-.custom-checkbox .custom-control-indicator {
+.custom-checkbox .custom-control-indicator-1 {
   border-radius: 0.25rem;
 }
 
-.custom-checkbox .custom-control-input:checked ~ .custom-control-indicator {
-  background-color: #524B52;
+.custom-checkbox .custom-control-input:checked ~ .custom-control-indicator-1 {
+  background-color: #FF8C3F;
+  border:2.5px solid #FF8C3F;
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3E%3Cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3E%3C/svg%3E");
 }
 
-.custom-checkbox .custom-control-input:indeterminate ~ .custom-control-indicator {
-  background-color: #524B52;
+.custom-checkbox .custom-control-input:indeterminate ~ .custom-control-indicator-1 {
+  background-color: #FF8C3F;
+  border:2.5px solid #FF8C3F;
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 4'%3E%3Cpath stroke='%23fff' d='M0 2h4'/%3E%3C/svg%3E");
 }
 
+.custom-control-indicator-2 {
+  position: absolute;
+  top: 0.25rem;
+  left: 0;
+  display: block;
+  width: 1.2rem;
+  height: 1.2rem;
+  pointer-events: none;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  background-color: transparent;
+  background-repeat: no-repeat;
+  border:2.5px solid #7B6D61;
+  border-radius: 5px;
+  background-position: center center;
+  background-size: 50% 50%;
+}
+.custom-checkbox .custom-control-indicator-2 {
+  border-radius: 0.25rem;
+}
+
+.custom-checkbox .custom-control-input:checked ~ .custom-control-indicator-2 {
+  background-color: #7B6D61;
+  border:2.5px solid #7B6D61;
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3E%3Cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3E%3C/svg%3E");
+}
+
+.custom-checkbox .custom-control-input:indeterminate ~ .custom-control-indicator-2 {
+  background-color: #7B6D61;
+  border:2.5px solid #7B6D61;
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 4'%3E%3Cpath stroke='%23fff' d='M0 2h4'/%3E%3C/svg%3E");
+}
 /*Radio*/
 /*.form-check-input {
   position: absolute;
@@ -443,6 +455,70 @@ select.form-control2:focus::-ms-value {
 .slider.round:before {
   border-radius: 20px;
 }
+/*social media buttons*/
+.fa {
+  padding: 7px;
+  font-size: 30px;
+  width: 30px;
+  height: 30px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+  border-radius: 50%;
+}
+.fa:hover {
+  color: white;
+  background: #FF8C3F;
+  text-decoration: none;
+}
+.fa-facebook {
+  background: rgba(0, 0, 0, 0.51);
+  color: white;
+}
+
+.fa-twitter {
+  background: rgba(0, 0, 0, 0.51);
+  color: white;
+}
+
+.fa-google {
+  background: rgba(0, 0, 0, 0.51);
+  color: white;
+}
+
+.fa-linkedin {
+  background: rgba(0, 0, 0, 0.51);
+  color: white;
+}
+
+.foot {
+  position: absolute;
+  right: 0;
+  left: 0;
+  background-color: #343C3F;
+  text-align: center;
+}
+.foot p{
+  margin-top: 1rem;
+  margin-bottom: 0.8rem;
+}
+.badge2 {
+  display: inline-block;
+  padding: 0.25em 0.4em;
+  width: 8.6875rem;
+  height: 2.125rem;
+  font-size: 75%;
+  font-weight: 700;
+  line-height: 1;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: baseline;
+  border-radius: 0.625rem;
+}
+.badge-light2 {
+  color: #ffffff;
+  background-color: #FF8C3F;
+}
 
 /* Page section
 ===============================================================*/
@@ -478,94 +554,6 @@ select.form-control2:focus::-ms-value {
   background: linear-gradient(to bottom right,#f5d760,#ff8c3f);
   border-radius: 0.9375rem;
 }
-
-/*.snip1515 {
-  font-family: 'Prompt', Arial, sans-serif;
-  position: relative;
-  float: left;
-  margin: 10px 1%;
-  min-width: 230px;
-  max-width: 315px;
-  width: 100%;
-  color: #000000;
-  text-align: center;
-  line-height: 1.4em;
-  font-size: 14px;
-  box-shadow: none !important;
-}
-
-.snip1515 * {
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-.snip1515 .profile-image {
-  display: inline-block;
-  width: 80%;
-  z-index: 1;
-  position: relative;
-  padding: 10px;
-  border: 2px solid #e8b563;
-}
-
-.snip1515 .profile-image img {
-  max-width: 100%;
-  vertical-align: top;
-}
-
-.snip1515 figcaption {
-  width: 100%;
-  background-color: #F2F2F2;
-  color: #555;
-  padding: 125px 25px 25px;
-  margin-top: -100px;
-  display: inline-block;
-}
-
-.snip1515 h3,
-.snip1515 h4,
-.snip1515 p {
-  margin: 0 0 5px;
-}
-
-.snip1515 h3 {
-  font-weight: 600;
-  font-size: 1.3em;
-  font-family: 'Prompt', Arial, sans-serif;
-}
-
-.snip1515 h4 {
-  color: #8c8c8c;
-  font-weight: 400;
-  letter-spacing: 2px;
-}
-
-.snip1515 p {
-  font-size: 0.9em;
-  letter-spacing: 1px;
-  opacity: 0.9;
-}
-
-.snip1515 .icons {
-  text-align: center;
-  width: 100%;
-}
-
-.snip1515 i {
-  padding: 10px 2px;
-  display: inline-block;
-  font-size: 18px;
-  font-weight: normal;
-  color: #e8b563;
-  opacity: 0.75;
-}
-
-.snip1515 i:hover {
-  opacity: 1;
-  -webkit-transition: all 0.35s ease;
-  transition: all 0.35s ease;
-}
-*/
 
 /* Shadow details
 ===============================================================*/
@@ -605,37 +593,33 @@ select.form-control2:focus::-ms-value {
 
 /* Right Side details
 ===============================================================*/
-.list-group-item2-action {
-  width: 100%;
-  color: #495057;
-  text-align: inherit;
+.boxs {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 100%;
+    border-radius: 12px;
+    margin: 0.3125rem;
+    padding: 0.6rem;
+    background-color: #ffffff;
 }
 
-.list-group-item2-action:focus, .list-group-item2-action:hover {
-  color: #495057;
-  text-decoration: none;
-  background-color: #f8f9fa;
+.boxs:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 
-.list-group-item2-action:active {
-  color: #212529;
-  background-color: #e9ecef;
+.boxs iframe {
+    border-radius: 12px;
+    width: 100%;
 }
 
-.list-group-item2 {
-  position: relative;
-  display: block;
-  padding: 0.75rem 1.25rem;
-  margin-bottom: 0.3125rem;
-  background-color: #ffffff;
-  border: 1rem #524B52;
-  border-radius: 0.5rem;
+.boxscontainer {
+    padding: 2px 16px;
 }
 
 .buttonLists {
-  border-radius: 0.5rem;
-  background-color: #ffffff;
-  border: 1rem;
+  border-radius: 12px;
+  background-color: transparent;
+  border: 2.5px solid #64676D;
   border-color: #524B52;
   color: #524B52;
   text-align: center;
@@ -669,13 +653,4 @@ select.form-control2:focus::-ms-value {
 
 .buttonLists:hover span:after {
   right: 0;
-}
-
-/* Font awesome*/
-@font-face {
-    font-family: FontAwesome;
-    src: url('font-awesome/font/fontawesome-webfont.eot');
-    src: url('font-awesome/font/fontawesome-webfont.eot?') format('embedded-opentype'),
-         url('font-awesome/font/fontawesome-webfont.woff') format('woff'),
-         url('font-awesome/font/fontawesome-webfont.ttf') format('truetype');
 }
