--- a/css/custom.css
+++ b/css/custom.css
@@ -34,6 +34,13 @@ h5, .h5 {
 h6, .h6 {
   font-size: 0.8rem;
 }
+section {
+  padding: 40px 0;
+}
+
+.featurette-divider {
+  margin: 1rem 0; /* Space out the Bootstrap <hr> more */
+}
 
 /*Navbar color,position degree (cards)
 ===============================================================*/
@@ -45,6 +52,16 @@ h6, .h6 {
   padding: 0.5rem 1rem;
 } /*for index*/
 
+.bg-primary2{
+  filter: brightness(0.9);
+-webkit-filter: brightness(0.9);
+-moz-filter: brightness(0.9);
+-o-filter: brightness(0.9);
+-ms-filter: brightness(0.9);
+}
+.font-bg-primary2{
+  opacity: 1;
+}
 /*Navbar position (index)
 ===============================================================*/
 .fixed-top-index {
@@ -135,6 +152,7 @@ h6, .h6 {
 .menu:hover {
   color: #0056b3;
   text-decoration: underline #FF8C3F;
+  transform: scale(1.2);
 }
 
 .menu:not([href]):not([tabindex]) {
@@ -156,6 +174,23 @@ h6, .h6 {
 .bgReg{
 	background: linear-gradient(to bottom right,#f5d760,#ff8c3f);
 	opacity:0.7;
+}
+#lines {
+  width:25%;
+  height:6.93px;
+  border-radius: 0.3125rem;
+  background: #fff;
+  margin-top:1rem;
+  position: relative;right:30px;
+  float: left;
+}
+#lines2 {
+  width:5%;
+  height:6.93px;
+  border-radius: 0.3125rem;
+  background: #fff;
+  margin-top:1rem;
+  float: left;
 }
 /* Switch (Reg)
 ===============================================================*/
@@ -242,6 +277,7 @@ input:checked + .slider:before {
   top:50%;
   width: 100%;
   height: 0px;
+  padding: 0.375rem 0.75rem;
   border:none;
   border-radius: 0px;
   border-bottom: 1px solid #ffffff;
@@ -253,14 +289,12 @@ input:checked + .slider:before {
 }
 
 .form-control2::-ms-expand {
-  background-color: transparent;
+  background-color: #fff;
   border: 0;
 }
 
 .form-control2:focus {
   color: #524B52;
-  background-color: transparent;
-  border-bottom: 1px solid #ffffff;
   outline: none;
 }
 
