--- a/css/custom.css
+++ b/css/custom.css
@@ -35,15 +35,29 @@ h6, .h6 {
   font-size: 0.8rem;
 }
 section {
-  padding: 40px 0;
+  padding: 5% 0;
 }
-
+.body-cards{
+  padding-top: 10%;
+  background-color: #F5F5F5;
+}
+.body-details{
+  padding-top: 10%;
+  background-color: #F5F5F5;
+}
 .featurette-divider {
   margin: 1rem 0; /* Space out the Bootstrap <hr> more */
+  width:100%;
+  height:2px;
+  border-radius: 0.3125rem;
+  background: #fff;
 }
 
 /*Navbar color,position degree (cards)
 ===============================================================*/
+.navbar {
+  padding: 1.35rem 1rem;
+}
 .navbar-dark .navbar-nav .nav-link2 {
   color: #524B52;
 }
@@ -59,18 +73,19 @@ section {
 -o-filter: brightness(0.9);
 -ms-filter: brightness(0.9);
 }
-.font-bg-primary2{
-  opacity: 1;
-}
+
 /*Navbar position (index)
 ===============================================================*/
+.bg-gray{
+  background-color: #F5F5F5;
+  box-shadow:0px 4px 17px 2px rgba(130,130,130,.5);
+}
 .fixed-top-index {
   position: fixed;
   top: 6%;
   right: 0;
   left: 0;
   z-index: 1030;
-  box-shadow:0px 4px 17px 2px rgba(130,130,130,.5);
 }
 
 .fixed-bottom-index {
@@ -103,63 +118,40 @@ section {
   border-style: none;
   height: 6rem;
   display: block;
+  position: relative;top:6%;
 }
 
-.carousel-caption2 {
-  position: absolute;
-  right: 15%;
-  bottom: 20px;
-  left: 15%;
-  top: 35%;
-  z-index: 10;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  color: #fff;
-  text-align: center;
+.logo-caption{
+  position: relative;left:40px;top:58px;
+  color: #4F4F4F;
+  font-size: 0.9rem;
 }
 
-/* Carousel base class
+/* Drop down
 ===============================================================*/
-.carousel {
-  margin-bottom: 4rem;
-}
-/* Since positioning the image, we need to help out the caption */
-.carousel-caption {
-  bottom: 3rem;
-  z-index: 10;
-}
-
-/* Declare heights because of positioning of img element */
-.carousel-item {
-  height: 17rem;
-  background-color: #777;
-}
-.carousel-item > img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  min-width: 100%;
-  height: 17rem;
+.drop-selector{
+  color:#524B52;
+  text-decoration:none;
+  background-color: transparent;
+  padding: 30%;
 }
 
 .menu {
-  color: #007bff;
+  color: #4F4F4F;
   text-decoration: none;
   background-color: transparent;
   -webkit-text-decoration-skip: objects;
 }
-
 .menu:hover {
-  color: #0056b3;
-  text-decoration: underline #FF8C3F;
-  transform: scale(1.2);
+  color: #4F4F4F;
+  border-bottom: 0.0625rem solid #FF8C3F;
+  text-decoration: none;
+  
 }
-
 .menu:not([href]):not([tabindex]) {
   color: inherit;
   text-decoration: none;
 }
-
 .menu:not([href]):not([tabindex]):focus, a:not([href]):not([tabindex]):hover {
   color: inherit;
   text-decoration: none;
@@ -180,7 +172,7 @@ section {
   height:6.93px;
   border-radius: 0.3125rem;
   background: #fff;
-  margin-top:1rem;
+  margin-top:1.3rem;
   position: relative;right:30px;
   float: left;
 }
@@ -189,7 +181,7 @@ section {
   height:6.93px;
   border-radius: 0.3125rem;
   background: #fff;
-  margin-top:1rem;
+  margin-top:1.3rem;
   float: left;
 }
 /* Switch (Reg)
