--- a/css/custom.css
+++ b/css/custom.css
@@ -5,6 +5,7 @@ html {
 
 body {
   font-family: 'Prompt',sans-serif;
+  color: #4F4F4F;
 }
 
 .tooltip{
@@ -37,14 +38,13 @@ h6, .h6 {
 section {
   padding: 5% 0;
 }
-.body-cards{
-  padding-top: 10%;
-  background-color: #F5F5F5;
+/* Page section
+===============================================================*/
+.page-section{
+  padding: 0px 0;
 }
-.body-details{
-  padding-top: 10%;
-  background-color: #F5F5F5;
-}
+
+/*HR divider*/
 .featurette-divider {
   margin: 1rem 0; /* Space out the Bootstrap <hr> more */
   width:100%;
@@ -53,8 +53,17 @@ section {
   background: #fff;
 }
 
-/*Navbar color,position degree (cards)
-===============================================================*/
+/*Padding body each page*/
+.body-cards{
+  padding-top: 10%;
+  background-color: #F5F5F5;
+}
+.body-details{
+  padding-top: 10%;
+  background-color: #F5F5F5;
+}
+
+/*Navbar color,position degree (Cards)*/
 .navbar {
   padding: 1.35rem 1rem;
 }
@@ -74,8 +83,7 @@ section {
 -ms-filter: brightness(0.9);
 }
 
-/*Navbar position (index)
-===============================================================*/
+/*Navbar position (Index)*/
 .bg-gray{
   background-color: #F5F5F5;
   box-shadow:0px 4px 17px 2px rgba(130,130,130,.5);
@@ -127,8 +135,7 @@ section {
   font-size: 0.9rem;
 }
 
-/* Drop down
-===============================================================*/
+/* Drop down*/
 .drop-selector{
   color:#524B52;
   text-decoration:none;
@@ -161,8 +168,7 @@ section {
   outline: 0;
 }
 
-/* Register background
-===============================================================*/
+/* Register background (Index: section search*/
 .bgReg{
 	background: linear-gradient(to bottom right,#f5d760,#ff8c3f);
 	opacity:0.7;
@@ -208,25 +214,63 @@ section {
     box-shadow:0px 2px 15px 0px rgba(130,130,130,.5);
     outline: none; /* Remove outline */
     background-color: #F5F5F5; /* Set a background color */
-    color: white; /* Text color */
     cursor: pointer; /* Add a mouse pointer on hover */
     padding: 1.25px; /* Some padding */
-    /*border-radius: 0.1rem;*/ /* Rounded corners */
-
-    width: 2.8125rem; /* ความกว้าง */
-    height: 2.8125rem; /* ความสูง */
+    width: 2.8125rem;
+    height: 2.8125rem;
     -moz-border-radius: 1.5rem; 
     -webkit-border-radius: 1.5rem;
     border-radius: 1.5rem;
 }
 
 #myBtn:hover {
-    background-color: #524B52; /* Add a dark-grey background on hover */
     box-shadow:0px 2px 15px 0px rgba(130,130,130,.5);
 }
+#return-to-top {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  border: none;
+  box-shadow:0px 2px 15px 0px rgba(130,130,130,.5);
+  background-color: #F5F5F5;
+  cursor:pointer;
+  padding: 1.25px;
+  width: 45px;
+  height: 45px;
+  -webkit-border-radius: 25px;
+  -moz-border-radius: 25px;
+  border-radius: 25px;
     
-
-/* The slider */
+    -webkit-transition: all 0.3s linear;
+    -moz-transition: all 0.3s ease;
+    -ms-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+}
+#return-to-top i {
+    color: #fff;
+    margin: 0;
+    position: relative;
+    left: 16px;
+    top: 13px;
+    font-size: 19px;
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -ms-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+}
+#return-to-top:hover {
+    background: rgba(0, 0, 0, 0.9);
+    box-shadow:0px 2px 15px 0px rgba(130,130,130,.5);
+}
+#return-to-top:hover i {
+    color: #fff;
+    top: 5px;
+}
+/* The slider for switch (Index: section search*/
 .slider {
   position: absolute;
   cursor: pointer;
@@ -263,6 +307,14 @@ input:checked + .slider:before {
   -webkit-transform: translateX(26px);
   -ms-transform: translateX(26px);
   transform: translateX(87px);
+}
+/* Rounded sliders */
+.slider.round {
+  border-radius: 20px;
+}
+
+.slider.round:before {
+  border-radius: 20px;
 }
 
 .form-control2 {
@@ -328,7 +380,8 @@ select.form-control2:focus::-ms-value {
 .form-control2-range {
   display: block;
 }
-/*Checkbox Reg*/
+
+/*Checkbox*/
 .custom-control2 {
   position: relative;
   display: -ms-inline-flexbox;
@@ -407,29 +460,7 @@ select.form-control2:focus::-ms-value {
   border:2.5px solid #7B6D61;
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 4'%3E%3Cpath stroke='%23fff' d='M0 2h4'/%3E%3C/svg%3E");
 }
-/*Radio*/
-/*.form-check-input {
-  position: absolute;
-  margin-top: 0.25rem;
-  margin-left: -1.25rem;
-}
-.was-validated .form-check-input:valid + .form-check-label, .form-check-input.is-valid + .form-check-label {
-  color: #524B52;
-}
-.was-validated .form-check-input:invalid + .form-check-label, .form-check-input.is-invalid + .form-check-label {
-  color: #524B52;
-}
-.form-inline .form-check-input {
-  position: relative;
-  margin-top: 0;
-  margin-right: 0.25rem;
-  margin-left: 0;
- }
-.form-check-label {
-  padding-left: 1.25rem;
-  margin-bottom: 0;
-}*/
-
+/*For every Herf*/
 .skip {
   color: #ffffff;
   text-decoration: none;
@@ -444,6 +475,19 @@ select.form-control2:focus::-ms-value {
   text-decoration: none;
 }
 
+.back-detail {
+  color: #524B52;
+  text-decoration: none;
+  background-color: transparent;
+  -webkit-text-decoration-skip: objects;
+  font-size: .9em;
+}
+
+.back-detail:hover {
+  color: #FF8C3F;
+  font-size: 1rem;
+  text-decoration: none;
+}
 .btn-outline-success2 {
   color: #fff;
   background-color: #FF8C3F;
@@ -473,16 +517,9 @@ select.form-control2:focus::-ms-value {
   border-color: #FF8C3F;
   opacity: .7;
 }
-/* Rounded sliders */
-.slider.round {
-  border-radius: 20px;
-}
 
-.slider.round:before {
-  border-radius: 20px;
-}
-/*social media buttons*/
-.fa {
+/*Social media buttons for contact and footer*/
+.icons{
   padding: 7px;
   font-size: 30px;
   width: 30px;
@@ -492,16 +529,40 @@ select.form-control2:focus::-ms-value {
   margin: 5px 2px;
   border-radius: 50%;
 }
-.fa:hover {
+.icons:hover{
   color: white;
   background: #FF8C3F;
   text-decoration: none;
+}
+.bar-list{
+  color: #A6A6A6;
+  padding: 5px;
+}
+.bar-list:hover{
+  color: #FF8C3F;
+}
+.top-arrow{
+  color: #4F4F4F;
+}
+/*.fa-noeffect {
+  font-size: 250%;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 50%;
+}*/
+.fa-angle-right{
+  padding-top: 5%;
+  width: 0;
+  height: 0;
 }
 .fa-facebook {
   background: rgba(0, 0, 0, 0.51);
   color: white;
 }
-
+.fa-facebook2 {
+  background: #999D9F;
+  color: #343C3F;
+}
 .fa-twitter {
   background: rgba(0, 0, 0, 0.51);
   color: white;
@@ -546,12 +607,6 @@ select.form-control2:focus::-ms-value {
   background-color: #FF8C3F;
 }
 
-/* Page section
-===============================================================*/
-.page-section{
-	padding: 0px 0;
-}
-
 /* Card
 ===============================================================*/
 .card{
@@ -581,7 +636,7 @@ select.form-control2:focus::-ms-value {
   border-radius: 0.9375rem;
 }
 
-/* Shadow details
+/* Shadow details (Cards page)
 ===============================================================*/
 .jumbotron2 {
   padding: 1rem 1rem;
@@ -638,7 +693,10 @@ select.form-control2:focus::-ms-value {
     border-color: transparent;
     width: 100%;
 }
-
+.boxs iframe {
+    border-radius: 12px;
+    width: 100%;
+}
 .boxscontainer {
     padding: 2px 16px;
 }
@@ -680,4 +738,17 @@ select.form-control2:focus::-ms-value {
 
 .buttonLists:hover span:after {
   right: 0;
+}
+.orange{
+  color: #FF8C3F;
+  display: inline-block;
+  float: left;
+  padding: 0 5%;
+}
+.orange-details{
+  color: #FF8C3F;
+}
+.type{
+  padding: 0 5%;
+  text-align: left;
 }
