--- a/css/custom.css
+++ b/css/custom.css
@@ -226,50 +226,7 @@ section {
 #myBtn:hover {
     box-shadow:0px 2px 15px 0px rgba(130,130,130,.5);
 }
-#return-to-top {
-  display: none;
-  position: fixed;
-  bottom: 20px;
-  right: 30px;
-  z-index: 99;
-  border: none;
-  box-shadow:0px 2px 15px 0px rgba(130,130,130,.5);
-  background-color: #F5F5F5;
-  cursor:pointer;
-  padding: 1.25px;
-  width: 45px;
-  height: 45px;
-  -webkit-border-radius: 25px;
-  -moz-border-radius: 25px;
-  border-radius: 25px;
-    
-    -webkit-transition: all 0.3s linear;
-    -moz-transition: all 0.3s ease;
-    -ms-transition: all 0.3s ease;
-    -o-transition: all 0.3s ease;
-    transition: all 0.3s ease;
-}
-#return-to-top i {
-    color: #fff;
-    margin: 0;
-    position: relative;
-    left: 16px;
-    top: 13px;
-    font-size: 19px;
-    -webkit-transition: all 0.3s ease;
-    -moz-transition: all 0.3s ease;
-    -ms-transition: all 0.3s ease;
-    -o-transition: all 0.3s ease;
-    transition: all 0.3s ease;
-}
-#return-to-top:hover {
-    background: rgba(0, 0, 0, 0.9);
-    box-shadow:0px 2px 15px 0px rgba(130,130,130,.5);
-}
-#return-to-top:hover i {
-    color: #fff;
-    top: 5px;
-}
+
 /* The slider for switch (Index: section search*/
 .slider {
   position: absolute;
@@ -534,6 +491,25 @@ select.form-control2:focus::-ms-value {
   background: #FF8C3F;
   text-decoration: none;
 }
+.icons-2{
+  padding: 7px;
+  font-size: 30px;
+  width: 30px;
+  height: 30px;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 50%;
+}
+.icons-2:hover{
+  color: white;
+  background: #FF8C3F;
+  text-decoration: none;
+}
+.foot-padding{
+  margin-top: 1rem;
+  margin-bottom: 0.8rem;
+  text-align: left;
+}
 .bar-list{
   color: #A6A6A6;
   padding: 5px;
@@ -591,7 +567,7 @@ select.form-control2:focus::-ms-value {
 }
 .badge2 {
   display: inline-block;
-  padding: 0.25em 0.4em;
+  padding: 0.5em 0.4em;
   width: 8.6875rem;
   height: 2.125rem;
   font-size: 75%;
@@ -606,7 +582,14 @@ select.form-control2:focus::-ms-value {
   color: #ffffff;
   background-color: #FF8C3F;
 }
-
+.feedback{
+  float: left;
+  color:#999D9F;
+}
+.phone{
+  text-align: center;
+  color: #999D9F;
+}
 /* Card
 ===============================================================*/
 .card{
@@ -660,6 +643,45 @@ select.form-control2:focus::-ms-value {
   padding-right: 0;
   padding-left: 0;
   border-radius: 0;
+}
+/* Lists
+===============================================================*/
+.table {
+    border-collapse: separate;
+    border-spacing: 10px;
+  }
+
+  /*.table td,
+  .table th {
+    background-color: #fff !important;
+  }*/
+
+  .table-bordered th,
+  .table-bordered td {
+    border: none;
+  }
+
+table {
+  border-collapse: collapse;
+}
+.table {
+  width: 100%;
+  max-width: 100%;
+  margin-bottom: 1rem;
+  background-color: transparent;
+}
+.table th,
+.table td {
+  padding: 0.75rem;
+  vertical-align: top;
+  border-top: 1px solid #e9ecef;
+}
+
+.table .table {
+  background-color: #fff;
+}
+.table-striped tbody tr:nth-of-type(odd) {
+  background-color: rgba(0, 0, 0, 0.05);
 }
 
 /* Image details
