--- a/css/custom.css
+++ b/css/custom.css
@@ -65,7 +65,7 @@ section {
 
 /*Navbar color,position degree (Cards)*/
 .navbar {
-  padding: 1.35rem 1rem;
+  padding: 0.6rem 1rem;
 }
 .navbar-dark .navbar-nav .nav-link2 {
   color: #524B52;
@@ -87,6 +87,7 @@ section {
 .bg-gray{
   background-color: #F5F5F5;
   box-shadow:0px 0px 14px 0px rgba(130, 130, 130, 0.5);
+  height:14%;
 }
 .fixed-top-index {
   position: fixed;
@@ -596,33 +597,78 @@ select.form-control2:focus::-ms-value {
 }
 /* Card
 ===============================================================*/
-.cards{
-  
+.cards-section{
+  padding-top: 2%;
+}
+.card {
+  display:inline-block;
+  width: 100%;
+  height: 6.85rem;
+  background-color: #ffffff;
+  line-height: 1.4em;
+  font-size: 1rem;
+  border-radius: 0.9375rem;
+  border: none;
+  margin-top:25%;
+  box-shadow: 0px 4px 17px 0px rgba(130,130,130,.5);
+  }
+  span {
+    display: block;
+  }
+.card:hover{
+  box-shadow: 0px 4px 17px 0px rgba(255, 140, 63, 0.35);
 }
 .topcard{
-  position: relative;bottom: 50%;left: 5%;
+  position: relative;bottom: 60%;left: 5%;
   display: block;
   width: 90%;
   height: 90%;
   z-index: 1;
   background: linear-gradient(to bottom right,#f5d760,#ff8c3f);
   border-radius: 0.9375rem;
+  box-shadow: 0px -1px 17px 0px rgba(130,130,130,.5);
 }
-.card {
-  display:block;
-  width: 90%;
-  height: 6.75rem;
-  color: #ffffff;
-  line-height: 1.4em;
-  font-size: 1rem;
+.topcard:hover{
+  box-shadow: 0px -1px 17px 0px rgba(255, 140, 63, 0.35);
+}
+.bg-logo{
+  position: relative;bottom:90%;
+  display: block;
+  width: 35%;
+  height: 50%;
+  z-index: 1;
+  background-color: #fff;
   border-radius: 0.9375rem;
-  border: none;
-  margin-top:25%;
-  margin-bottom: 15%;
-  }
-  span {
-    display: block;
-  }
+}
+.bg-logo img{
+  padding: 0.7rem 0.7rem 0 0.7rem;
+  position: relative;;
+  display: inline-block;
+  max-width: 100%;
+  height: auto;
+}
+.name-details{
+  position: relative;
+  font-weight:bold;
+  color: #4F4F4F;
+  padding:1rem 0.7rem 0 0.7rem;
+  float: left;
+  margin-bottom: 0;
+}
+.name-details-caption{
+  position: relative;
+  font-size: 90%;
+  color: #4F4F4F;
+  padding:0rem 0.7rem 1.5rem 0.7rem;
+  float: right;
+}
+.caption-details{
+  position: relative;bottom:90%;
+  font-size: 90%;
+  color: #4F4F4F;
+  padding-left: 5%;
+  line-height: 0.8;
+}
 
 /* Shadow details (Cards page)
 ===============================================================*/
