--- a/css/custom.css
+++ b/css/custom.css
@@ -613,6 +613,15 @@ select.form-control2:focus::-ms-value {
   margin-top: 1rem;
   margin-bottom: 0.8rem;
 }
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px; /* Set the fixed height of the footer here */
+  line-height: 60px; /* Vertically center the text there */
+  background-color: #f5f5f5;
+}
+
 .badge2 {
   display: inline-block;
   padding: 0.5em 0.4em;
