--- a/css/custom.css
+++ b/css/custom.css
@@ -4,7 +4,7 @@
     
     body {
         font-family: 'Prompt', sans-serif;
-        position: relative;
+        /*position: relative;*/
         color: #4F4F4F;
     }
     
@@ -40,7 +40,7 @@
     
     h3,
     .h3 {
-        color: #633991;
+        color: #4F4F4F;
         font-size: 1.95rem;
         font-weight: 500;
     }
@@ -66,7 +66,7 @@
     }
     
     p {
-        color: #959094;
+        color: #4F4F4F;
     }
     
     p.lead {
@@ -443,16 +443,35 @@
         background: #fff;
     }
     /*Padding body each page*/
-    
-    .body-cards {
-        padding-top: 10%;
+    .body-cards{
         background-color: #F5F5F5;
+        padding-top: 10%;
+    }
+    .body-details{
+        background-color: #F5F5F5;
+        padding-top: 10%;
+    }
+   
+    @media (max-width: 375px) {
+        .body-cards {
+        padding-top: 10%;
+        }
+    
+        .body-details {
+        padding-top: 20%;
+        }
     }
     
-    .body-details {
+  /*  @media (min-width: 1200px) {
+        .body-cards {
         padding-top: 10%;
-        background-color: #F5F5F5;
-    }
+        }
+    
+        .body-details {
+        padding-top: 12%;
+        }
+    }*/
+
     /*Navbar color,position degree (Cards)*/
     
     .navbar {
@@ -597,6 +616,40 @@
         margin-top: 1.3rem;
         float: left;
     }
+    #lines3 {
+        width: 25%;
+        height: 6.93px;
+        border-radius: 0.3125rem;
+        background: #FF8C3F;
+        position: relative;
+        float: left;
+        margin: 1.5rem 0;
+    }
+    
+    #lines4 {
+        width: 5%;
+        height: 6.93px;
+        border-radius: 0.3125rem;
+        background: #FF8C3F;
+        float: left;
+        margin: 1.5rem .8rem;
+    }
+    /*#lines5 {
+        width: 25%;
+        height: 6.93px;
+        border-radius: 0.3125rem;
+        background: #FF8C3F;
+        position: relative;
+        margin: 1.5rem 0;
+    }
+    
+    #lines6 {
+        width: 5%;
+        height: 6.93px;
+        border-radius: 0.3125rem;
+        background: #FF8C3F;
+        margin: 1.5rem .8rem;
+    }*/
     /* Switch (Reg)
 ===============================================================*/
     /* The switch - the box around the slider */
@@ -1039,7 +1092,7 @@
     .card {
         display: inline-block;
         width: 100%;
-        height: 7rem;
+        height: 8rem;
         background-color: #ffffff;
         line-height: 1.4em;
         font-size: 1rem;
@@ -1054,10 +1107,6 @@
         display: block;
     }
     
-    .card:hover {
-        box-shadow: 0px 4px 17px 0px rgba(255, 140, 63, 0.35);
-    }
-    
     .topcard {
         position: relative;
         bottom: 60%;
@@ -1066,26 +1115,29 @@
         width: 90%;
         height: 90%;
         z-index: 1;
-        background: linear-gradient(to bottom right, #f5d760, #ff8c3f);
         border-radius: 0.9375rem;
         box-shadow: 0px -1px 17px 0px rgba(130, 130, 130, .5);
-        padding-top: 1rem;
+        padding-top: .5rem;
     }
-    
-    .topcard:hover {
+
+    .card:hover {
+        box-shadow: 0px 4px 17px 0px rgba(255, 140, 63, 0.35);
+    }
+
+    .card:hover .topcard {
         box-shadow: none;
     }
     
     .bg-logo {
         position: relative;
-        bottom: 90%;
+        bottom: 100%;
         display: block;
         width: 40%;
-        height: 55%;
+        height: 60%;
         z-index: 1;
         background-color: #fff;
         border-radius: 0.9375rem;
-        padding: 0.7rem 0.7rem 0.1rem 0.7rem;
+        padding: 0.3rem 0.7rem 0.1rem 0.7rem;
     }
     
     .bg-logo img {
@@ -1097,7 +1149,7 @@
     .details-header {
         font-weight: 600;
         margin-top: 0;
-        margin-bottom: .5rem;
+        margin-bottom: .1rem;
         line-height: 1.2;
         padding-left: 1rem;
         color: #4F4F4F;
@@ -1114,7 +1166,7 @@
     
     .caption-details {
         position: relative;
-        bottom: 80%;
+        bottom: 90%;
         font-size: 90%;
         color: #4F4F4F;
         padding-left: 5%;
@@ -1124,18 +1176,17 @@
     @media(min-width: 576px) {
         .p-responsive {
             display: block;
-            font-size: 80%;
+            font-size: 85%;
         }
-        .cards {}
+
         .topcard {
             position: relative;
-            bottom: 50%;
+            bottom: 55%;
             left: 5%;
             display: block;
             width: 90%;
-            height: 90%;
+            height: 100%;
             z-index: 1;
-            background: linear-gradient(to bottom right, #f5d760, #ff8c3f);
             border-radius: 0.9375rem;
         }
         .card {
@@ -1153,28 +1204,31 @@
         span {
             display: block;
         }
+    }
+
+#orange-gradient{
+    background: linear-gradient(to bottom right, #f5d760, #ff8c3f);
+}
+
         /* Shadow details (Cards page)
 ===============================================================*/
-        .jumbotron2 {
-            padding: 1rem 1rem;
+@media(min-width:300px){
+        .jumbotron {
+            padding: 2rem 2rem;
             margin-bottom: 1rem;
             background-color: #FFFFFF;
             border-radius: 0.625rem;
             box-shadow: 0px 4px 17px 0px rgba(130, 130, 130, .5);
         }
-        .jumbotron2 h5 {
+        .jumbotron h5 {
             color: #FF8C3F;
         }
-        @media (min-width: 576px) {
-            .jumbotron2 {
-                padding: 2rem 2rem;
-            }
-        }
-        .jumbotron-fluid2 {
+        .jumbotron-fluid {
             padding-right: 0;
             padding-left: 0;
             border-radius: 0;
         }
+    }
         /* Lists
 ===============================================================*/
         .table {
@@ -1309,3 +1363,29 @@
             padding-bottom: 0;
             margin-bottom: .1rem;
         }
+/*============ NEW =============*/
+.img-radius{
+    border-radius: 1.25rem;
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+}
+.linear-img-right{
+    -webkit-mask-image:-webkit-gradient(linear, left top, right bottom, from(rgba(0,0,0,1)), to(rgba(0,0,0,0)));
+}
+.linear-img-left{
+    -webkit-mask-image:-webkit-gradient(linear, right top, left bottom, from(rgba(0,0,0,1)), to(rgba(0,0,0,0)));
+}
+.img-p{
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+}
+.set-text{
+    display: flex;
+}
+.text-middle-left{
+    margin: auto 0;
+}
+.text-middle-right{
+    margin: auto 0;
+    width: 100%;
+}
