--- a/css/custom.css
+++ b/css/custom.css
@@ -383,24 +383,13 @@
     }
     /*  TABS
 ----------------------*/
-    
-    .tab-content {
-        border-bottom-right-radius: 3px;
-        border-bottom-left-radius: 3px;
-        /*background-color: #FFF;*/
-        box-shadow: 0px 5px 7px 0px rgba(0, 0, 0, 0.04);
-        padding: 3rem;
-    }
-    
+
     @media (max-width:992px) {
         .tab-content {
             padding: 1.5rem;
         }
     }
     
-    .tab-content p {
-        line-height: 1.8;
-    }
     
     .tab-content h2 {
         margin-bottom: 0.5rem;
@@ -409,22 +398,29 @@
     .nav-tabs {
         border-bottom: 0;
     }
-    
+    .nav-link{
+        display: inline;
+        padding: .5rem 1rem;
+    }
     .nav-tabs .nav-item .nav-link,
     .nav-tabs .nav-link:focus,
     .nav-tabs .nav-link:hover {
-        padding: 1rem 1rem;
+        /*padding: 1rem 1rem;*/
         /*border-color: #faf6fb #faf6fb #FFF;*/
-        font-size: 19px;
-        color: #b5a4c8;
+        font-size: 20px;
+        /*color: #b5a4c8;*/
         /*background:  #f5eff7    ;*/
+    }
+    .nav-tabs .nav-link{
+        border: none;
+        border-radius: 
     }
     
     .nav-tabs .nav-link.active {
-        background: #FFF;
-        border-top-width: 3px;
-        border-color: #ce75b4 #faf6fb #FFF;
-        color: #633991;
+        background: transparent;
+        /*border-top-width: 3px;*/
+        border-color: transparent;
+        /*color: #633991;*/
     }
     /* Page section
 ===============================================================*/
@@ -438,9 +434,10 @@
         margin: 1rem 0;
         /* Space out the Bootstrap <hr> more */
         width: 100%;
-        height: 2px;
+        height: 4px;
         border-radius: 0.3125rem;
-        background: #fff;
+        border-top: none;
+        background: #CDCDCD;
     }
     /*Padding body each page*/
     .body-cards{
@@ -1166,17 +1163,21 @@
     
     .caption-details {
         position: relative;
-        bottom: 90%;
-        font-size: 90%;
+        bottom: 95%;
         color: #4F4F4F;
         padding-left: 5%;
         line-height: 0.8;
+        z-index: 1;
     }
     
     @media(min-width: 576px) {
         .p-responsive {
             display: block;
-            font-size: 85%;
+            font-size: 100%;
+        }
+        .d-responsive{
+            display: block;
+            font-size: 87%
         }
 
         .topcard {
