--- a/css/custom.css
+++ b/css/custom.css
@@ -96,10 +96,10 @@
     
     .btn-primary {
         border-radius: 3px;
-        background-image: -moz-linear-gradient( 122deg, #ebb111 0%, #ff5420 100%);
-        background-image: -webkit-linear-gradient( 122deg, #ebb111 0%, #ff5420 100%);
-        background-image: -ms-linear-gradient( 122deg, #ebb111 0%, #ff5420 100%);
-        background-image: linear-gradient( 122deg, #ebb111 0%, #ff5420 100%);
+        background-image: -moz-linear-gradient( 122deg, #F5D961 0%, #FF8C3F 100%);
+        background-image: -webkit-linear-gradient( 122deg, #F5D961 0%, #FF8C3F 100%);
+        background-image: -ms-linear-gradient( 122deg, #F5D961 0%, #FF8C3F 100%);
+        background-image: linear-gradient( 122deg, #F5D961 0%, #FF8C3F 100%);
         /*box-shadow: 0px 9px 32px 0px rgba(0, 0, 0, 0.2);*/
         font-weight: 500;
         padding: 0.6rem 2rem;
@@ -112,8 +112,11 @@
     .btn-primary:not([disabled]):not(.disabled).active,
     .btn-primary:not([disabled]):not(.disabled):active,
     .show>.btn-primary.dropdown-toggle {
-        background-image: linear-gradient( 122deg, #eb8511 0%, #ff5420 100%);
+        background-image: linear-gradient( 122deg, #F5D961 0%, #FF8C3F 100%);
         color: #FFF;
+        background-color: transparent;
+        border-color: transparent;
+        box-shadow: none;
     }
     
     .btn-light {
@@ -498,24 +501,72 @@
     }
 
     /*Padding body each page*/
-    .body-cards {
+    
+    @media (min-width: 300px) {
+        .body-cards {
+        background-color: #F5F5F5;
+        padding-top: 35%;
+        }
+    }
+    @media (min-width: 300px) {
+        .body-details {
+        background-color: #F5F5F5;
+        padding-top: 35%;
+        }
+    }
+    @media (min-width: 576px) {
+        .body-cards {
+        background-color: #F5F5F5;
+        padding-top: 20%;
+        }
+    }
+    @media (min-width: 400px) {
+        .body-details {
+        background-color: #F5F5F5;
+        padding-top: 30%;
+        }
+    }
+    @media (min-width: 768px) {
+        .body-cards {
+        background-color: #F5F5F5;
+        padding-top: 15%;
+        }
+    
+        .body-details {
+        background-color: #F5F5F5;
+        padding-top: 15%;
+        }
+    }
+    @media (min-width: 992px) {
+        .body-cards {
+        background-color: #F5F5F5;
+        padding-top: 13%;
+        }
+    
+        .body-details {
+        background-color: #F5F5F5;
+        padding-top: 13%;
+        }
+    }
+    @media (min-width: 1200px) {
+        .body-cards {
         background-color: #F5F5F5;
         padding-top: 10%;
-    }
+        }
     
-    .body-details {
+        .body-details {
         background-color: #F5F5F5;
         padding-top: 10%;
+        }
     }
-    
-    @media (max-width: 375px) {
+   /* @media (min-width: 1200px) {
         .body-cards {
             padding-top: 10%;
         }
         .body-details {
             padding-top: 20%;
         }
-    }
+    }*/
 
     /*Navbar color,position degree (Cards)*/
     
@@ -1115,7 +1166,7 @@
         border: none;
         margin-top: 25%;
         box-shadow: 0 2px 9px 0 rgba(0,0,0,.1), 0 3px 25px 0 rgba(0,0,0,.1);
-        padding-bottom: .3rem;
+        padding-bottom: .5rem;
     }
     
     span {
@@ -1165,7 +1216,7 @@
         font-weight: 600;
         margin-top: 0;
         margin-bottom: .1rem;
-        line-height: 1.2;
+        line-height: 1.35;
         padding-left: 1rem;
         color: #4F4F4F;
     }
@@ -1186,6 +1237,7 @@
         padding-left: 5%;
         line-height: 0.8;
         z-index: 1;
+        padding-right: .5rem;
     }
     
     @media(min-width: 576px) {
@@ -1357,8 +1409,10 @@
             /*float: left;*/
             padding: 0 5%;
         }
-        .orange-details {
-            color: #FF8C3F;
+        .orange-download {
+            /*color: #FF8C3F;*/
+            padding-left: 5%;
+            text-decoration: underline;
         }
         .type {
             padding: 0 5%;
