คอมจะไปแล้ววว ฮือออ อัพไว้ก่อนนะะะะ

--- a/css/custom.css
+++ b/css/custom.css
@@ -1476,7 +1476,7 @@ input{
 }
 
 @media (min-width: 576px) {
-  .modal-dialog {
+  .modal-dialog { 
     max-width: 70%;
     margin: 30px auto;
   }
@@ -1516,7 +1516,7 @@ input{
   }
 
   .row-offcanvas-right.active .sidebar-offcanvas {
-    right: -50%; /* 6 columns */
+    right: -45%; /* 6 columns */
   }
 
   .row-offcanvas-left .sidebar-offcanvas {
@@ -1537,8 +1537,23 @@ input{
 
   .sidebar-offcanvas {
     position: absolute;
-    top: 0;
-    width: 95%; /* 6 columns */
-    padding-right: 15%;
+    top: 1%;
+    width: 80%; /* 6 columns */
   }
+
+  .sidebar-offcanvas-left {
+    position: absolute;
+    top: 0;
+    width: 50%; /* 6 columns */
+  }
+  .row-offcanvas-left .sidebar-offcanvas-left {
+    left: -100%; /* 12 columns */
+  }
+  .row-offcanvas-left.active .sidebar-offcanvas-left {
+    left: -45%; /* 6 columns */
+  }
+
+}
+.list-group{
+    margin-top: 3%;
 }
